# garak

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  PROJECTS.md  README.md  pyproject.toml  requirements.txt
.githooks/: prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: bump_version.py
.github/workflows/: cla.yml  docs.yml  labels.yml  lint.yml  maintain_cache.yml  nightly.yml  prepare_package.yml  release.yml  remote_package_install.yml  stale.yml  test_linux.yml  test_macos.yml  test_report_build.yaml  test_windows.yml
docs/: README.md  cohere_v5_upgrade.md  requirements-docs.txt
docs/source/: 404.rst  Makefile  _config.rst  _plugins.rst  analyze.rst  analyze.tbsa.rst  ascii_smuggling.rst  attempt.rst  basic.rst  buffs.rst  cli.rst  cliref.rst  command.rst  conf.py  configurable.rst  contributing.rst  detector_metrics.rst  detectors.rst  exception.rst  extending.generator.rst  extending.probe.rst  extending.rst  faster.md  faster.rst  garak.buffs.ascii_smuggling.rst  garak.buffs.low_resource_languages.rst  garak.buffs.rst  garak.detectors.base.rst  garak.detectors.divergence.rst  garak.detectors.dropboxrepeat.rst  garak.detectors.encoding.rst  garak.detectors.exploitation.rst  garak.detectors.goodside.rst  garak.detectors.html_injection.rst  garak.detectors.lmrc.rst  garak.detectors.malwaregen.rst  garak.detectors.misleading.rst  garak.detectors.refusal.rst  garak.detectors.rst  garak.detectors.sysprompt.rst  (+91 more)
garak/: __init__.py  _config.py  _plugins.py  attempt.py  cli.py  command.py  configurable.py  exception.py  langservice.py  payloads.py  report.py  translator.py
garak-report/: .gitignore  .prettierrc  README.md  eslint.config.js  extracted_digest.json  index.html  package.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
garak-report/public/: index.html
garak-report/src/: App.tsx  index.css  main.tsx
garak/analyze/: __init__.py  aggregate_reports.py  analyze_log.py  bootstrap_ci.py  calibration.py  ci_calculator.py  count_tokens.py  detector_metrics.py  get_tree.py  misp.py  perf_stats.py  qual_review.py  rebuild_cis.py  report_avid.py  report_digest.py  tbsa.py
garak/buffs/: ascii_smuggling.py  base.py  encoding.py  low_resource_languages.py  lowercase.py  paraphrase.py
garak/configs/: bag.yaml  default.yaml  fast.json  fast.yaml  full.yaml  tox_and_buffs.yaml
garak/data/: __init__.py  inthewild_jailbreak_llms.json  misp_descriptions.tsv  smuggling_homoglyph_5.txt  tags.misp.tsv
garak/detectors/: agent_breaker.py  always.py  ansiescape.py  any.py  apikey.py  base.py  continuation.py  dan.py  divergence.py  dropboxrepeat.py  encoding.py  encoding.py.orig  exploitation.py  fileformats.py  goodside.py  html_injection.py  injection.py  judge.py  knownbadsignatures.py  leakreplay.py  lmrc.py  malwaregen.py  misleading.py  mitigation.py  packagehallucination.py  perspective.py  productkey.py  promptinject.py  propile.py  refusal.py  shields.py  snowball.py  specialwords.py  sysprompt.py  sysprompt_extraction.py  unsafe_content.py  visual_jailbreak.py  web_injection.py  xss.py
garak/evaluators/: base.py
garak/generators/: azure.py  base.py  bedrock.py  cohere.py  function.py  ggml.py  groq.py  guardrails.py  huggingface.py  langchain.py  langchain_serve.py  litellm.py  llm.py  mistral.py  nemo.py  nim.py  nvcf.py  octo.py  ollama.py  openai.py  rasa.py  replicate.py  rest.py  test.py  watsonx.py  websocket.py
garak/harnesses/: base.py  probewise.py  pxd.py
garak/langproviders/: base.py  local.py  remote.py
garak/probes/: __init__.py  _tier.py  agent_breaker.py  ansiescape.py  apikey.py  apikeys.py  atkgen.py  audio.py  av_spam_scanning.py  badchars.py  base.py  continuation.py  dan.py  divergence.py  doctor.py  donotanswer.py  dra.py  dropboxrepeat.py  encoding.py  exploitation.py  fileformats.py  fitd.py  glitch.py  goat.py  goodside.py  grandma.py  html_injection.py  injection.py  latentinjection.py  leakreplay.py  lmrc.py  malwaregen.py  misleading.py  packagehallucination.py  phrasing.py  promptinject.py  propile.py  realtoxicityprompts.py  sata.py  smuggling.py  (+10 more)
garak/resources/: ansi.py  encodings.py  garak.core.yaml  matching.py  plugin_cache.json
garak/translators/: base.py  local.py  remote.py
signatures/: cla.json
tests/: conftest.py  test_attempt.py  test_cli_list_filtering.py  test_cohere_chat.py  test_cohere_v5.py  test_config.py  test_configurable.py  test_data.py  test_docs.py  test_hitlog.py  test_internal_structures.py  test_payloads.py  test_report.py  test_reqs.py  test_sysprompt.py
tests/_assets/: agg.report.jsonl  lmrc.report.jsonl  quack.report.jsonl  report_test.report.jsonl  test.report.jsonl
tests/analyze/: test_aggregate.py  test_analyze.py  test_bootstrap_ci.py  test_calibration.py  test_ci_calculator.py  test_detector_metrics.py  test_qual_review.py  test_report_digest.py  test_report_digest_plugin_cache.py  test_report_digest_sql_injection.py  test_tbsa.py
tests/buffs/: test_buff_config.py  test_buffs.py  test_buffs_paraphrase.py
tests/cli/: test_cli_list_filtering.py
tests/detectors/: test_detectors.py  test_detectors_agent_breaker.py  test_detectors_always.py  test_detectors_ansiescape.py  test_detectors_apikey.py  test_detectors_base.py  test_detectors_continuation.py  test_detectors_divergence.py  test_detectors_encoding.py  test_detectors_exploitation.py  test_detectors_fileformats.py  test_detectors_injection.py  test_detectors_judge.py  test_detectors_malwaregen.py  test_detectors_misleading.py  test_detectors_mitigation.py  test_detectors_packagehallucination.py  test_detectors_productkey.py  test_detectors_promptinject.py  test_detectors_propile.py  test_detectors_refusal.py  test_detectors_shields.py  test_detectors_sysprompt.py  test_detectors_sysprompt_extraction.py  test_detectors_unsafe_content.py  test_detectors_web_injection.py  test_detectors_xss.py  test_dropbox_repeat.py
tests/generators/: conftest.py  hf_inference.json  (+29 more)
tools/: rebuild_plugin_cache.sh  requirements.txt  sysprompt_drh_to_hf_dataset.py  termscrape.py
(+369 files in other folders)
