[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "garak"
version = "0.13.3.pre1"
authors = [
  { name = "Leon Derczynski", email="lderczynski@nvidia.com" },
  { name = "Subho Majumdar", email="subho@vijil.ai" },
  { name = "nv052193" },
  { name = "Mads Kongsbak" },
  { name = "Erick Galinkin", email="egalinkin@nvidia.com" },
  { name = "Tianhao Li" },
  { name = "Phyllis Poh" },
  { name = "Razvan Dinu" },
  { name = "Zander Mackie" },
  { name = "Greg Stephens" },
  { name = "Jeffrey Martin", email="jemartin@nvidia.com" },
  { name = "Ahsan Ayub" },
  { name = "Jonathan Liberman" },
  { name = "Gustav Fredrikson" },
  { name = "Oh Tien Cheng" },
  { name = "Brain John" },
  { name = "Naman Mishra" },
  { name = "Soumili Nandi" },
  { name = "Arjun Krishna" },
  { name = "Mihailo Milenkovic" },
  { name = "Kai Greshake" },
  { name = "Martin Borup-Larsen" },
  { name = "Emmanuel Ferdman" },
  { name = "Eric Therond" },
  { name = "Zoe Nolan" },
  { name = "Harsh Raj" },
  { name = "Shine-afk" },
  { name = "Rafael Sandroni" },  
  { name = "Eric Hacker" },
  { name = "Blessed Uyo" },
  { name = "Ikko Eltociear Ashimine" },
  { name = "iamnotcj" },
  { name = "Dwight Temple" },
  { name = "Shane Rosse" },
  { name = "Masaya Ogushi" },
  { name = "Viktor T. Zetterberg" },
  { name = "Erwan Roussel" },
  { name = "Matthew Rowe" },
  { name = "Aishwarya Padmakumar" },
  { name = "Marco Rosa" },
  { name = "Ian Chu" },
  { name = "Mike McKiernan" },
  { name = "Divya Chitimalla" },
  { name = "Katherine Luna" },
  { name = "Dave Baker" },
  { name = "Jack Kelly" },
  { name = "Amrit Prakash" },
  { name = "Cássia Sampaio" },
  { name = "Nakul Rajpal" },
  { name = "Noah Oeksuez" },
  { name = "Dhruv Malik" },
  { name = "Patricia Pampanelli" },
  { name = "Joseph Davis Chamdani" },
  { name = "Rob Geada" },
  { name = "Ashish RajAnand" },
  { name = "Paulina Kalicka" },
  { name = "Gal Moshkovitz" },
  { name = "Jack Smith" },
  { name = "Paul A. Parkanzky" },
]
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "LLM vulnerability scanner"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "base2048>=0.1.3",
  "transformers>=4.51.3,<4.57.0",
  "datasets>=3.0.0,<4.0",
  "colorama>=0.4.3",
  "tqdm>=4.67.1",
  "openai>=1.45.0,<2",
  "google-api-python-client>=2.0",
  "backoff>=2.1.1",
  "rapidfuzz>=3.0.0",
  "jinja2>=3.1.6",
  "nltk>=3.9.1",
  "accelerate>=0.23.0",
  "avidtools==0.1.2",
  "stdlibs>=2022.10.9",
  "cmd2==2.4.3",
  "torch>=2.6.0",
  "sentencepiece>=0.1.99",
  "markdown>=3.4.3",
  "numpy>=2.0.0",
  "zalgolib>=0.2.2",
  "ecoji>=0.1.1",
  "deepl==1.17.0",
  "fschat>=0.2.36",
  "jsonpath-ng>=1.6.1",
  "huggingface_hub>=0.21.0",
  'python-magic-bin>=0.4.14; sys_platform == "win32"',
  'python-magic>=0.4.21; sys_platform != "win32"',
  "lorem==0.1.1",
  "xdg-base-dirs>=6.0.1",
  "wn==0.9.5",
  "nvidia-riva-client==2.16.0",
  "google-cloud-translate>=2.0.4",
  "grpcio-tools>=1.71.0",
  "langdetect==1.0.9",
  "tiktoken>=0.7.0",
  "jsonschema>=4.21.0",
  "ftfy>=6.3.1",
]

[project.optional-dependencies]
tests = [
  "pytest>=8.0",
  "pytest-mock>=3.14.0",
  "requests-mock==1.12.1",
  "respx>=0.21.1",
  "pytest-cov>=5.0.0",
  "pytest_httpserver>=1.1.0",
  "langcodes>=3.4.0",
]
lint = [
  "black==24.4.2",
  "pylint>=3.1.0",
]
dev = [
  "garak[tests,lint]",
]
calibration = [
  "scipy>=1.14.0",
]
all_plugins = [
  "garak[plugin_cohere,plugin_langchain,plugin_llava,plugin_litellm,plugin_mistralai,plugin_nemoguardrails,plugin_nemollm,plugin_ollama,plugin_optimum,plugin_replicate,plugin_audio,plugin_dra]"
]
plugin_cohere = [
  "cohere>=5.16.0"
]
plugin_langchain = [
  "langchain>=0.3.25,<1.0.0",
]
plugin_llava = [
  "pillow>=10.4.0",
]
plugin_litellm = [
  "litellm>=1.68.1",
]
plugin_mistralai = [
  "mistralai==1.5.2",
]
plugin_nemoguardrails = [
  "nemoguardrails>=0.11.0",
]
plugin_nemollm = [
  "nemollm>=0.3.0",
]
plugin_ollama = [
  "ollama>=0.4.7",
]
plugin_optimum = [
  "optimum-nvidia>=0.1.0b5",
]
plugin_replicate = [
  "replicate>=0.8.3",
]  
plugin_audio = [
  "soundfile>=0.13.1",
  "librosa>=0.10.2"
]
plugin_dra = [
  "detoxify>=0.5.0"
]
[project.urls]
"Homepage" = "https://github.com/NVIDIA/garak"
"Bug Tracker" = "https://github.com/NVIDIA/garak/issues"

[project.scripts]
garak = "garak.__main__:main"

[tool.flit.module]
name = "garak"

[tool.flit.sdist]
include = [
  "*.md",
  "*.txt",
  "garak/analyze/templates/*",
  "garak/configs/*",
  "garak/resources/*.json",
  "garak/resources/*.yaml",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
filterwarnings = [
    "ignore",
    "default:::garak",
]

[tool.coverage.run]
source = ["./garak"]
omit = ["tests/*"]
